Fix code blocks improper wrapping on smaller screens

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -73,6 +73,7 @@ blockquote {
 
 code {
   font-family: ui-monospace, SFMono-Regular, ui-monospace, 'Menlo', 'Consolas', 'Monaco', 'Liberation Mono', 'Lucida Console', monospace;
+  word-wrap: break-word;
 }
 
 footer {
